--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -66,8 +66,8 @@ main {
 ul {
     list-style-type: none;
     margin-bottom: 30px;
-    margin-left: 20px;
-    margin-right: 20px;
+    /*margin-left: 20px;
+    margin-right: 20px;*/
     padding: 0;
     overflow: hidden;
     background-color: pink;
@@ -108,4 +108,74 @@ ul a:hover {
     float: left;
     object-fit: cover;
     margin-top: 50px;
+}
+
+#profile-pic-upload-container {
+    background-color: #FFFFCC;
+    width: 300px;
+    height: 130px;
+    border-style: solid;
+    border-color: #FFAD00;
+    border-radius: 10px;
+    margin-left: 300px;
+    border-width: 2px;
+    display: flex;
+    flex-direction: column;
+    /*justify-content: center;*/
+    align-items: center;
+    margin-top: 50px;
+}
+
+#pic-file-upload {
+    position: relative;
+    overflow: hidden;
+    background-color: #FFAD00;
+    color: black;
+    width: 110px;
+    border: none;
+    border-radius: 4px;
+    font-size: 18px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+}
+
+#pic-upload-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+}
+
+h3 {
+    margin-bottom: 14px;
+}
+
+#hide-upload {
+    margin-top: 15px;
+    margin-bottom: 7px;
+    margin-left: 250px;
+    cursor: pointer;
+}
+
+#clear {
+    clear: both;
+}
+
+#post-container {
+    margin-left: 380px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+#message-textarea {
+    width: 500px;
+    height: 200px;
+    border-radius: 10px;
+    /*box-shadow: 0 0 0 3px #000;*/
+    border: 5px solid transparent;
 }
