--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -32,6 +32,11 @@ main {
 
 #reg-header {
     margin-bottom: 20px;
+    margin-top: 25px;
+}
+
+#reg-text {
+    margin-bottom: 15px;
 }
 
 .reg-input {
@@ -45,13 +50,13 @@ main {
 .reg-button {
     height: 30px;
     width: 120px;
-    background-color: #51CDCB;
-    color: black;
+    background-color: #CC6666;
+    color: white;
     font: 20px bold;
     border-radius: 10px;
     margin-top: 20px;
     margin-bottom: 20px;
-    margin-left: 5px;
+    margin-left: 85px;
 }
 
 #login-container {
@@ -62,6 +67,10 @@ main {
     justify-content: center;
     align-items: center;
     margin-top: 50px;
+}
+
+#login-header {
+    margin-top: 30px;
 }
 
 #profile-container {
@@ -124,11 +133,11 @@ ul a:hover {
 }
 
 #profile-pic-upload-container {
-    background-color: #FFFFCC;
+    background-color: white;
     width: 300px;
     height: 130px;
     border-style: solid;
-    border-color: #FFAD00;
+    border-color: #444444;
     border-radius: 10px;
     margin-left: 300px;
     border-width: 2px;
@@ -142,8 +151,8 @@ ul a:hover {
 #pic-file-upload {
     position: relative;
     overflow: hidden;
-    background-color: #FFAD00;
-    color: black;
+    background-color: #CC6666;
+    color: white;
     width: 110px;
     border: none;
     border-radius: 4px;
@@ -179,9 +188,16 @@ h3 {
     clear: both;
 }
 
-#post-container {
-    margin-left: 380px;
+#post-text {
+    font-size: 20px;
     margin-top: 80px;
+    margin-left: 250px;
+    color: #CC6666;
+}
+
+#post-container {
+    margin-left: 350px;
+    margin-top: 50px;
     margin-bottom: 60px;
 }
 
@@ -211,4 +227,43 @@ h3 {
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 5px;
+}
+
+
+#thanks-for-post-text {
+    font-size: 20px;
+    margin-top: 80px;
+    margin-left: 250px;
+    color: #CC6666;
+}
+
+#post-made {
+    margin-left: 300px;
+    margin-top: 40px;
+    width: 600px;
+    border: 1px solid #444444;
+    border-radius: 10px;
+    background-color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 30px;
+    overflow: auto;
+}
+
+#small-profile-pic {
+    width: 100px;
+    height: 100px;
+    float: left;
+    display: inline-block;
+}
+
+#post-made-text {
+    float: left;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+#post-description {
+    font-weight: bold;
+    margin-bottom: 10px;
 }
