--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -395,3 +395,8 @@ h3 {
     font-weight: bold;
     margin-bottom: 10px;
 }
+
+#delete-post {
+    cursor: pointer;
+    text-decoration: underline;
+}
