--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -20,7 +20,6 @@ main {
     grid-column: 1 / 4;
 }
 
-
 #new-org-button {
     position: relative;
     top: 90px;
@@ -164,6 +163,13 @@ main {
     margin-top: 50px;
 }
 
+#login-logo {
+    height: 100px;
+    width: 180px;
+    float: left;
+    margin-top: 10px;
+}
+
 #login-header {
     margin-top: 30px;
 }
@@ -172,19 +178,17 @@ main {
     grid-column: 1 / 4;
 }
 
-ul {
-    list-style-type: none;
-    margin-bottom: 30px;
-    padding-top: 15px;
-    padding-bottom: 20px;
+#nav-header-container {
+    height: 130px;
     background-color: #CC6666;
-    padding-left: 400px;
 }
 
 #logo {
     height: 100px;
     width: 180px;
     float: left;
+    margin-left: 370px;
+    margin-top: 10px;
 }
 
 #nav-heading {
@@ -192,16 +196,27 @@ ul {
     margin-left: 110px;
     font-size: 40px;
     float: left;
-    padding-top: 30px;
+    margin-top: 40px;
+}
+
+ul {
+    list-style-type: none;
+    padding-top: 15px;
+    padding-bottom: 20px;
+    padding-left: 1150px;
+}
+
+li {
+    float: left;
 }
 
 li a {
     display: block;
     color: white;
     padding-top: 40px;
+    margin-right: 30px;
     padding-bottom: 35px;
     text-decoration: none;
-    margin-left: 850px;
 }
 
 ul a:hover {
@@ -222,6 +237,10 @@ ul a:hover {
     font-size: 20px;
     margin-top: 40px;
     color: #CC6666;
+    width: 800px;
+    margin-bottom: 40px;
+    /*text-align: center;*/
+    /*margin-left: 50px;*/
 }
 
 .profile-tag {
@@ -315,6 +334,10 @@ h3 {
     clear: both;
 }
 
+#about-text {
+    width: 550px;
+}
+
 #post-text {
     font-size: 20px;
     margin-top: 80px;
@@ -399,6 +422,7 @@ h3 {
 #delete-post {
     cursor: pointer;
     text-decoration: underline;
+    margin-top: 40px;
 }
 
 #profile-posts-container {
