--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -150,6 +150,20 @@ h2 {
     text-decoration: underline;
 }
 
+#contact-form-container {
+    position: relative;
+    top: 70px;
+    left: 340px;
+    width: 800px;
+    border: 1px solid #444444;
+    border-radius: 10px;
+    background-color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 30px;
+    overflow: hidden;
+}
+
 #reg-container {
     grid-column: 2;
     grid-row: 1;
@@ -381,7 +395,7 @@ h3 {
     color: #CC6666;
 }
 
-#post-container {
+#tainer {
     margin-left: 350px;
     margin-top: 50px;
     margin-bottom: 10px;
