--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -253,7 +253,7 @@ ul {
     list-style-type: none;
     padding-top: 15px;
     padding-bottom: 20px;
-    padding-left: 1150px;
+    padding-left: 1100px;
 }
 
 li {
@@ -395,7 +395,7 @@ h3 {
     color: #CC6666;
 }
 
-#tainer {
+#post-container {
     margin-left: 350px;
     margin-top: 50px;
     margin-bottom: 10px;
@@ -487,4 +487,68 @@ h3 {
     margin-bottom: 50px;
     color: #CC6666;
     margin-left: 160px;
+}
+
+#inbox-container {
+    grid-column: 1 / 4;
+}
+
+
+#private-messages-container {
+    width: 400px;
+    float: left;
+    margin-top: 90px;
+}
+
+.private-message-container {
+    margin-bottom: 40px;
+    width: 300px;
+    border: 1px solid #444444;
+    border-radius: 10px;
+    background-color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 5px;
+    overflow: hidden;
+    margin-left: 20px;
+}
+
+.home-post-description {
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.private-message-subject {
+    font-weight: bold;
+    margin-left: 5px;
+    margin-bottom: 10px;
+    float: left;
+}
+
+.private-message-timestamp {
+    float: right;
+    margin-right: 8px;
+}
+
+.private-message-sender {
+    margin-left: 5px;
+    clear: both;
+}
+
+#whole-message-container {
+    float: left;
+    margin-top: 70px;
+    margin-left: 50px;
+    width: 800px;
+}
+
+.whole-message-tag {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 15px;
+    margin-top: 25px;
+}
+
+.whole-message-message {
+    margin-top: 40px;
 }
