--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -95,7 +95,6 @@ h2 {
     height: 100px;
     float: left;
     display: inline-block;
-    cursor: pointer;
 }
 
 .home-post-text {
@@ -108,6 +107,21 @@ h2 {
 .home-post-description {
     font-weight: bold;
     margin-bottom: 10px;
+}
+
+.home-more {
+    text-decoration: underline;
+    margin-top: 40px;
+    float: left;
+    cursor: pointer;
+}
+
+.home-contact {
+    text-decoration: underline;
+    float: left;
+    margin-top: 40px;
+    margin-left: 30px;
+    cursor: pointer;
 }
 
 #more-info-container {
@@ -162,6 +176,49 @@ h2 {
     padding-bottom: 20px;
     padding-left: 30px;
     overflow: hidden;
+}
+
+#contact-form-image-text-container {
+    float: left;
+    display: inline-block;
+}
+
+#contact-form-image {
+    width: 200px;
+    height: 200px;
+}
+
+#contact-form {
+    float: left;
+    margin-left: 20px;
+}
+
+#contact-form-name {
+    margin-top: 10px;
+    font-size: 20px;
+}
+
+#contact-form-header {
+    font-weight: bold;
+    margin-bottom: 15px;
+    font-size: 20px;
+}
+
+.contact-form-input {
+    padding: 12px 20px;
+    width: 300px;
+    border: 1px solid #444444;
+    border-radius: 10px;
+    margin-top: 15px;
+}
+
+#contact-form-textarea {
+    width: 500px;
+    height: 200px;
+    border-radius: 10px;
+    box-shadow: 0 0 0 1px #444444;
+    border: 1px solid transparent;
+    margin-top: 30px;
 }
 
 #reg-container {
