--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -221,6 +221,38 @@ h2 {
     margin-top: 30px;
 }
 
+#thank-you-container {
+    position: relative;
+    top: 70px;
+    left: 430px;
+    width: 600px;
+    height: 160px;
+    border: 1px solid #444444;
+    border-radius: 10px;
+    background-color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 30px;
+    overflow: hidden;
+}
+
+#thank-you-text-container {
+    margin-left: 110px;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+#thank-you-text {
+    margin-bottom: 5px;
+}
+
+#hide-thank-you {
+    margin-top: 10px;
+    margin-bottom: 7px;
+    margin-left: 520px;
+    cursor: pointer;
+}
+
 #reg-container {
     grid-column: 2;
     grid-row: 1;
@@ -567,7 +599,8 @@ h3 {
     padding-bottom: 20px;
     padding-left: 5px;
     overflow: hidden;
-    margin-left: 20px;
+    margin-left: 27px;
+    cursor: pointer;
 }
 
 .home-post-description {
