--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -627,9 +627,15 @@ h3 {
 
 #whole-message-container {
     float: left;
-    margin-top: 70px;
+    margin-top: 90px;
     margin-left: 50px;
     width: 800px;
+    border: 1px solid #444444;
+    border-radius: 10px;
+    background-color: white;
+    padding-bottom: 130px;
+    padding-left: 25px;
+    padding-right: 30px;
 }
 
 .whole-message-tag {
@@ -640,5 +646,5 @@ h3 {
 }
 
 .whole-message-message {
-    margin-top: 40px;
+    margin-top: 75px;
 }
